--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="/qr-code-component-main/images/image-qr-code.png" alt="QR Code" width="310px" height="310px" class="qr-code">
+      <img src="/images/image-qr-code.png" alt="QR Code" width="310px" height="310px" class="qr-code">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skill to the next level</p>
     </div>
