--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,12 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
+  <main>
     <div class="card">
       <img src="images/image-qr-code.png" alt="QR Code" width="310px" height="310px" class="qr-code">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skill to the next level</p>
     </div>
-  </div>
+  <main>
 </body>
 </html> 
