--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skill to the next level</p>
     </div>
-  <main>
+  </main>
 </body>
 </html> 
